# CompSci-HandIn

./: README.md
autoupdater/AutoUpdate-main/: autoupdater.py
installer/installer-main/: Launcher.py
server/: server.py
server/DraggieGamesServer-main/: draggiegames.service  errors.md  papers.json  pyproject.toml  readme.md  redeemed_codes.txt  requirements.txt  run_script.sh  server.py  users.json
server/DraggieGamesServer-main/DraggieGamesServer-server/: pyproject.toml
unity/: README.md
unity/CS-Project-main/: packages.config  readme.md
website/draggiegames.com-main/: 404.html  README.md  account.html  community.html  delete_account.html  games-library.html  index.html  launcher.html  login.html  news.html  old-index.html  redeem.html  register.html  reset.html  saturnian.html  secure_reset.html  signup.html  test_choristes.html  verify_email.html
website/draggiegames.com-main/css/: article_styles.css  buttons_prettification.css  carousel-fixer.css  ensure_mobile.css  main.css  pace.css  pretty.css
website/draggiegames.com-main/js/: TEST_choristes.js  account.js  authenticator.js  auto_token_login.js  code_get.js  count.js  deleter-1325ef2.js  mailer.js  main-937dbe4.js  main-carousel.js  notices.js  recover-c373s.js  redeemer.js  registerer.js  secure_reset-d34d12.js  verify_email.js
website/draggiegames.com-main/jsobf/: authenticator.js  auto_token_login.js  code_get.js  count.js  deleter-1325ef2.js  main-937dbe4.js  recover-c373s.js  redeemer.js  registerer.js  secure_reset-d34d12.js  verify_email.js
(+4 files in other folders)
