[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.2.5"
urllib3 = "^1.26.12"
Flask-Login = "^0.6.2"
Flask-Cors = "3.0.10"
requests = "^2.31.0"
Flask-Caching = "^2.0.2"
xds-protos = "^0.0.11"
boto3 = "1.28.44"
Werkzeug = "^3.0.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"